--- a/requirements.txt
+++ b/requirements.txt
@@ -40,9 +40,9 @@ typing_extensions==4.14.1
 tzdata==2025.2
 urllib3==2.5.0
 watchdog==6.0.0
-spacy==3.7.2
+spacy>=3.7.0,<4.0.0
 textstat==0.7.4
 matplotlib==3.9.2
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
+
 
 
