--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,26 +1,33 @@
 {
-  "name": "Python 3",
-  // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
+  "name": "Contract Simplifier",
   "image": "mcr.microsoft.com/devcontainers/python:1-3.11-bullseye",
+
   "customizations": {
     "codespaces": {
       "openFiles": [
         "README.md",
-        "main.py"
+        "app_streamlit.py"
       ]
     },
     "vscode": {
       "settings": {},
       "extensions": [
         "ms-python.python",
-        "ms-python.vscode-pylance"
+        "ms-python.vscode-pylance",
+        "ms-toolsai.jupyter",
+        "ms-azuretools.vscode-docker"
       ]
     }
   },
-  "updateContentCommand": "[ -f packages.txt ] && sudo apt update && sudo apt upgrade -y && sudo xargs apt install -y <packages.txt; [ -f requirements.txt ] && pip3 install --user -r requirements.txt; pip3 install --user streamlit; echo '✅ Packages installed and Requirements met'",
+
+  // Install system packages and Python dependencies
+  "postCreateCommand": "sudo apt-get update && sudo apt-get upgrade -y && if [ -f packages.txt ]; then sudo xargs apt-get install -y < packages.txt; fi && pip install --upgrade pip && if [ -f requirements.txt ]; then pip install -r requirements.txt; fi && echo '✅ All requirements installed'",
+
+  // Auto-start Streamlit app
   "postAttachCommand": {
-    "server": "streamlit run main.py --server.enableCORS false --server.enableXsrfProtection false"
+    "server": "streamlit run app_streamlit.py --server.enableCORS false --server.enableXsrfProtection false"
   },
+
   "portsAttributes": {
     "8501": {
       "label": "Application",
