--- a/requirements.txt
+++ b/requirements.txt
@@ -45,4 +45,14 @@ textstat==0.7.4
 matplotlib==3.9.2
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
 
+streamlit>=1.20
+transformers>=4.30
+datasets>=2.10
+torch>=2.0
+sentencepiece
+textstat
+spacy
+nltk
+tqdm
+accelerate
 
